Correct text align attribute for centering client logos

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -26,6 +26,7 @@ a{
 	width: 1140px;
 	margin: 0 auto;
 	padding: 40px 0;
+	text-align: center;
 }
 /** Nav Section **/
 
@@ -291,6 +292,7 @@ a:visited{color: #6d6e71;}
 .client {
 	padding: 10px 10px;
 	display: inline;
+	text-align: center;
 }
 
 .client_row {
